fix for missing scrollbar on linux popup

--- a/quick-tabs/assets/styles.css
+++ b/quick-tabs/assets/styles.css
@@ -36,6 +36,14 @@ body {
     overflow-y: auto;
 }
 
+div.content {
+  margin: 0;
+  padding: 0;
+  max-height: 450px;
+  overflow: auto;
+  overflow-x: hidden;
+}
+
 .qs_input {
     font-size: 12px;
     font-family: "Lucida Grande", Lucida, Verdana, sans-serif;
@@ -57,7 +65,7 @@ img.tabimage {
 }
 
 table {
-	width:350px;
+	width:100%;
 }
 
 tr {
